Fixed keyboard shortcuts
also updated jQuery to 1.8.2

--- a/options.html
+++ b/options.html
@@ -3,9 +3,9 @@
 		<title>Deezer Mediakeys Reloaded Options</title>
 		<link type="text/css" rel="stylesheet" href="css/jquery.jgrowl.css" />
 		<link type="text/css" rel="stylesheet" href="css/style.css" />
-		<script type="text/javascript" src="js/jquery-1.7.2.min.js"></script>
+		<script type="text/javascript" src="js/jquery-1.8.2.min.js"></script>
 		<script type="text/javascript" src="js/jquery.jgrowl.js"></script>
-		<script type="text/javascript" src="js/const.js"></script>
+		<script type="text/javascript" src="js/init.js"></script>
 		<script type="text/javascript" src="js/options.js"></script>
 	</head>
 	<body>
