Enhance a little the styling of the options

--- a/options.html
+++ b/options.html
@@ -4,11 +4,14 @@
   <title>Options for Deezer Mediakeys Reloaded</title>
   <style>
     body { padding: 10px; }
+    label { display: block; padding-bottom: 25px }
+    label * { display: inline-block; vertical-align: middle }
   </style>
 </head>
 <body>
   <label>
-    <input type="checkbox" id="notifications"/>Enable notifications
+    <input type="checkbox" id="notifications"/>
+    <span>Enable notifications</span>
   </label>
   <button id="save">Save</button>
   <script src="options.js"></script>
