--- a/options.html
+++ b/options.html
@@ -14,6 +14,6 @@
     <span>Enable notifications</span>
   </label>
   <button id="save">Save</button>
-  <script src="options.js"></script>
+  <script src="js/options.js"></script>
 </body>
 </html>
