--- a/options.html
+++ b/options.html
@@ -3,9 +3,10 @@
 <head>
   <title>Options for Deezer Mediakeys Reloaded</title>
   <style>
-    body { padding: 10px; }
+    body { position: relative; padding: 10px; }
     label { display: block; padding-bottom: 25px }
     label * { display: inline-block; vertical-align: middle }
+    #status { display: inline-block; padding-left: 5px }
   </style>
 </head>
 <body>
@@ -14,6 +15,7 @@
     <span>Enable notifications</span>
   </label>
   <button id="save">Save</button>
+  <div id="status"></div>
   <script src="js/options.js"></script>
 </body>
 </html>
